--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,9 @@
 .rating-icon{
           width: 20px;
 }
+
+.footer{
+          background: #000;
+          color: white;
+          padding: 30px;
+}
